[workspace]
members = ["bundler", "dino", "dino-macros", "dino-server"]
resolver = "2"

[workspace.dependencies]
bundler = { path = "bundler" }
dino-macros = { path = "dino-macros" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.86"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
