[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
lazy_static = "1.5.0"
path-absolutize = "3.1.1"
regex = "1.10.6"
serde = { workspace = true }
serde_json = { workspace = true }
swc_common = { version = "0.34.3", features = ["tty-emitter"] }
swc_ecma_codegen = "0.151.0"
swc_ecma_parser = "0.146.3"
swc_ecma_transforms_base = "0.140.0"
swc_ecma_transforms_typescript = "0.191.0"
swc_ecma_transforms_react = "0.186.1"
swc_ecma_visit = "0.101.0"
swc_bundler = "0.230.1"
swc_ecma_ast = "0.115.1"
swc_ecma_loader = "0.46.0"
swc_atoms = "0.6.5"
url = "2.5.2"
ureq = { version = "2.10.1", features = ["charset"] }
sha = "1.0.3"
colored = "2.1.0"
dirs = "5.0.1"
