[package]
name = "dino-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
arc-swap = "1.7.1"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
dashmap = "6.0.1"
indexmap = { version = "2.4.0", features = ["serde"] }
matchit = "0.8.4"
serde = { workspace = true }
dino-macros = { workspace = true }
rquickjs = { version = "0.6.2", features = ["full"] }
typed-builder = "0.20.0"
serde_json = { workspace = true }
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
