[package]
name = "dino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
askama = "0.12.1"
blake3 = "1.5.4"
bundler = { workspace = true }
clap = { version = "4.5.16", features = ["derive"] }
dialoguer = { version = "0.11.0", features = [
    "completion",
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
] }
enum_dispatch = "0.3.13"
git2 = { version = "0.19.0", default-features = false }
glob = "0.3.1"
rquickjs-macro = "0.6.2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dino-server = { workspace = true }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
tokio-stream = { version = "0.1.15", features = ["sync"] }
